Updated all the notebooks for the recommendation algorithm

--- a/notebooks/content_based_based_on_the_description.ipynb
+++ b/notebooks/content_based_based_on_the_description.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### On récupère les offres achetées par les utilisateurs"
+    "### We get the offers reserved by users"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "debut = time.time()\n",
-    "offres_achetees = pd.read_sql_query(\"\"\"SELECT booking.\"userId\" as user_id, stock.\"offerId\" as offer_id, type, description, offer.name \n",
+    "offers_reserved_by_the_users = pd.read_sql_query(\"\"\"SELECT booking.\"userId\" as user_id, stock.\"offerId\" as offer_id, type, description, offer.name \n",
     "                       FROM booking \n",
     "                       LEFT JOIN stock ON booking.\"stockId\" = stock.id \n",
     "                       LEFT JOIN offer ON stock.\"offerId\"=offer.\"id\"\n",
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offres_achetees"
+    "offers_reserved_by_the_users"
    ]
   },
   {
@@ -63,14 +63,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offres_achetees['offer_id'].nunique()"
+    "offers_reserved_by_the_users['offer_id'].nunique()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### On ne garde que les offres ayant une description et qui de plus ont plus de 600 caractères "
+    "### We only keep offers with a description and which also have more than 600 characters"
    ]
   },
   {
@@ -79,8 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offres_achetees = offres_achetees[offres_achetees['description'].notnull()]\n",
-    "offres_achetees = offres_achetees[offres_achetees['description'].map(len) > 600]"
+    "offers_reserved_by_the_users = offers_reserved_by_the_users[offers_reserved_by_the_users['description'].notnull()]\n",
+    "offers_reserved_by_the_users = offers_reserved_by_the_users[offers_reserved_by_the_users['description'].map(len) > 600]"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offres_achetees = offres_achetees.reset_index()"
+    "offers_reserved_by_the_users = offers_reserved_by_the_users.reset_index(drop=True)"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offres_achetees"
+    "offers_reserved_by_the_users"
    ]
   },
   {
@@ -107,14 +107,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "offres_achetees['offer_id'].nunique()"
+    "offers_reserved_by_the_users['offer_id'].nunique()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### On calcule le TF-IDF des offres "
+    "### We calculate the TF-IDF of the offers"
    ]
   },
   {
@@ -130,7 +130,7 @@
     "                     strip_accents = 'ascii', \\\n",
     "                     lowercase = True)\n",
     "\n",
-    "tfidf_matrice = vectorizer.fit_transform(offres_achetees['description'])\n",
+    "tfidf_matrix = vectorizer.fit_transform(offers_reserved_by_the_users['description'])\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### On calcule la sililarité entre les offres"
+    "### We calculate the similarity between the offers"
    ]
   },
   {
@@ -153,7 +153,7 @@
     "debut = time.time()\n",
     "\n",
     "#Linear kernel = cosine_similarity quand on a une très grande quantité de données (linear kernel est plus rapide)\n",
-    "cosinus_similarite = linear_kernel(tfidf_matrice, tfidf_matrice)\n",
+    "cosinus_similarity = linear_kernel(tfidf_matrix, tfidf_matrix)\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
@@ -164,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### On récupère pour chaque offre, les offres qui sont similaires"
+    "### We retrieve for each offer, offers that are similar"
    ]
   },
   {
@@ -175,15 +175,15 @@
    "source": [
     "debut = time.time()\n",
     "\n",
-    "resultat = {} #Dictionnaire pour les résultats sous la forme (offer_id : (Score, offer_id))\n",
+    "result = {} #Dictionnaire pour les résultats sous la forme (offer_id : (Score, offer_id))\n",
     "\n",
     "#On itère sur toutes les lignes\n",
     "#Pour chaque ligne, on cherche les scores les plus élevés et on les trie par ordre decroissant \n",
     "#On récupère les ids des offres et on les mets dans résulat\n",
-    "for idx, ligne in offres_achetees.iterrows(): \n",
-    "    indices_similaire = cosinus_similarite[idx].argsort()[:-6:-1] \n",
-    "    offres_similaires = [(cosinus_similarite[idx][i], offres_achetees['offer_id'][i]) for i in indices_similaire]\n",
-    "    resultat[ligne['offer_id']] = offres_similaires[1:]\n",
+    "for idx, row in offers_reserved_by_the_users.iterrows(): \n",
+    "    similar_indexes = cosinus_similarity[idx].argsort()[:-6:-1] \n",
+    "    similar_offers = [(cosinus_similarity[idx][i], offers_reserved_by_the_users['offer_id'][i]) for i in similar_indexes]\n",
+    "    result[row['offer_id']] = similar_offers[1:]\n",
     "  \n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
@@ -198,32 +198,32 @@
    "source": [
     "debut = time.time()\n",
     "\n",
-    "#On récupère le nom de l'offre \n",
+    "#Get the name of the offer\n",
     "def nom(id):\n",
-    "    return offres_achetees.loc[offres_achetees['offer_id'] == id]['name'].tolist()[0]\n",
+    "    return offers_reserved_by_the_users.loc[offers_reserved_by_the_users['offer_id'] == id]['name'].tolist()[0]\n",
     "\n",
-    "#On récupère la description de l'offre\n",
+    "#Get the description of the offer \n",
     "def description(id): \n",
-    "    return offres_achetees.loc[offres_achetees['offer_id'] == id]['description'].tolist()[0]\n",
+    "    return offers_reserved_by_the_users.loc[offers_reserved_by_the_users['offer_id'] == id]['description'].tolist()[0]\n",
     "\n",
-    "#On récupère l'id de l'offre \n",
+    "#Get the id of the offer \n",
     "def offer_id(id): \n",
-    "    return offres_achetees.loc[offres_achetees['offer_id'] == id]['offer_id'].tolist()[0]    \n",
+    "    return offers_reserved_by_the_users.loc[offers_reserved_by_the_users['offer_id'] == id]['offer_id'].tolist()[0]    \n",
     "\n",
-    "#On récupère 'num' offres similaires à notre offre id\n",
-    "def similaire(id, num):\n",
+    "#Get'num' offers similar to the offer_id\n",
+    "def similar(id, num):\n",
     "    if (num == 0):\n",
-    "        print(\"Impossible de recommander une offre car vous n'avez pas choisi le nombre d'offres à recommander\")\n",
+    "        print(\"Cannot recommend an offer because you did not choose the number of offers to recommend\")\n",
     "    \n",
     "    else :\n",
-    "        print(\"On recommande \" + str(num) + \" offres similaires à \" + nom(id) + \" \\n\" + \"Description : \\\n",
+    "        print(\"We recommend \" + str(num) + \" similar offers to \" + nom(id) + \" \\n\" + \"Description : \\\n",
     "\" + description(id) + \"\\n\" + \"Id : \" + str(offer_id(id)))\n",
     "        print(\"\\n\" + \"###########################################################################################\")\n",
     "        \n",
-    "    recs = resultat[id][:num]\n",
+    "    recs = result[id][:num]\n",
     "    recs = list(set(recs)) #Pour supprimer les doublons\n",
     "    for rec in recs:\n",
-    "        print(\" \\n Vous aimeriez aussi l'offre : \" + nom(rec[1]) + \" (score: %.3f\" % rec[0] + \") \\n\" + \"Description : \\\n",
+    "        print(\" \\n You would also like the offer: \" + nom(rec[1]) + \" (score: %.3f\" % rec[0] + \") \\n\" + \"Description : \\\n",
     "\" + description(rec[1]) + \"\\n\" + \"Id : \" + str(offer_id(rec[1])))\n",
     "        print(\"\\n\" + \"###########################################################################################\")\n",
     "        \n",
@@ -236,9 +236,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Très bon exemple d'offre :\n",
-    "- Michael Jackson : id = 188929\n",
-    "- Dictionnaire : id = 314706"
+    "### Very good examples of :\n",
+    "- Michael Jackson's offer: id = 188929\n",
+    "- Dictionary's offer : id = 314706"
    ]
   },
   {
@@ -247,15 +247,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_offre = 188929\n",
-    "similaire(id_offre, 4)"
+    "id_offre = 314706\n",
+    "similar(id_offre, 4)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### On récupère le vecteur TF-IDF d'une offre"
+    "### We retrieve the TF-IDF vector of an offer"
    ]
   },
   {
@@ -264,28 +264,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Vecteur de l'offre [\"index\"]\n",
-    "index = offres_achetees[offres_achetees['offer_id']==id_offre].index[0]\n",
-    "tfidf_de_loffre = tfidf_matrice[index]\n",
+    "index = offers_reserved_by_the_users[offers_reserved_by_the_users['offer_id']==id_offre].index[0]\n",
+    "tfidf_of_the_offer = tfidf_matrix[index]\n",
     "\n",
-    "print(\"L'offre a pour titre : \", offres_achetees['name'][index], \"\\n\" )\n",
+    "print(\"The title of the offer is: \", offers_reserved_by_the_users['name'][index], \"\\n\" )\n",
     "\n",
     "#On met les tf-idf dans un dataframe\n",
-    "df_tfidf = pd.DataFrame(tfidf_de_loffre.T.todense(), index = vectorizer.get_feature_names(), columns=[\"tfidf\"])\n",
+    "df_tfidf = pd.DataFrame(tfidf_of_the_offer.T.todense(), index = vectorizer.get_feature_names(), columns=[\"tfidf\"])\n",
     "df_tfidf = df_tfidf.sort_values(by=[\"tfidf\"], ascending=False)\n",
     "print(df_tfidf.head(20))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Tous les mots \n",
-    "print('Tous les mots présents dans la description : ')\n",
-    "tfidf_mots_description = vectorizer.get_feature_names()\n",
-    "print(tfidf_mots_description)"
+    "### All the words present in the description:"
    ]
   },
   {
@@ -294,7 +288,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(tfidf_mots_description)"
+    "print('All the words present in the description: ')\n",
+    "all_the_words_in_the_description = vectorizer.get_feature_names()\n",
+    "print(all_the_words_in_the_description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(all_the_words_in_the_description)"
    ]
   }
  ],
