--- a/notebooks/get_user_offer_interaction_and_put_a_grade.ipynb
+++ b/notebooks/get_user_offer_interaction_and_put_a_grade.ipynb
@@ -17,7 +17,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Pour calculer le temps global\n",
     "debut1 = time.time()"
    ]
   },
@@ -34,14 +33,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Offers rated by users from 0 to 5\n",
+    "- Offers reserved: 5\n",
+    "- Offers reserved but not consumed: 4\n",
+    "- Offers reserved and canceled: 3\n",
+    "- Favorite offers: 2\n",
+    "- Offers clicked: 1\n",
+    "- Offers ignored: 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On recupere les offres achetées par les utilisateurs et on leur donne la note de 5 \n",
     "debut = time.time()\n",
-    "offres_achetees = pd.read_sql_query(\"\"\"SELECT booking.\"userId\" as user_id, stock.\"offerId\" as offer_id, type, \"isVirtual\" \n",
+    "offers_reserved_by_the_user = pd.read_sql_query(\"\"\"SELECT booking.\"userId\" as user_id, stock.\"offerId\" as offer_id, type, \"isVirtual\" \n",
     "                       FROM booking \n",
     "                       LEFT JOIN stock ON booking.\"stockId\" = stock.id \n",
     "                       LEFT JOIN offer ON stock.\"offerId\"=offer.\"id\"\n",
@@ -49,10 +60,9 @@
     "                       WHERE booking.\"isUsed\"=True AND booking.\"isCancelled\"=False \n",
     "                       AND offer.type!='EventType.ACTIVATION' AND offer.type != 'ThingType.ACTIVATION'\n",
     "                       \"\"\", connection)\n",
-    "offres_achetees['note']=5\n",
+    "offers_reserved_by_the_user['note']=5\n",
     "\n",
-    "#On enregistre en csv \n",
-    "offres_achetees.to_csv('offres_achetees.csv', sep = '\\t', index=False)\n",
+    "offers_reserved_by_the_user.to_csv('offers_reserved_by_the_user.csv', sep = '\\t', index=False)\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
@@ -65,10 +75,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On recupere la table des utilisateurs qui ont acheté des offres mais pas consommé\n",
     "debut = time.time()\n",
     "\n",
-    "offres_pas_consommees = pd.read_sql_query(\"\"\"SELECT booking.\"userId\" as user_id, stock.\"offerId\" as offer_id, type, \"isVirtual\" \n",
+    "offers_reserved_by_the_user_but_not_consumed = pd.read_sql_query(\"\"\"SELECT booking.\"userId\" as user_id, stock.\"offerId\" as offer_id, type, \"isVirtual\" \n",
     "                       FROM  booking  \n",
     "                       LEFT JOIN stock ON booking.\"stockId\" = stock.id \n",
     "                       LEFT JOIN offer ON stock.\"offerId\"=offer.\"id\"\n",
@@ -76,10 +85,9 @@
     "                       WHERE booking.\"isUsed\"=False AND booking.\"isCancelled\"=False\n",
     "                       AND offer.type!='EventType.ACTIVATION' AND offer.type != 'ThingType.ACTIVATION'\n",
     "                       \"\"\", connection)\n",
-    "offres_pas_consommees['note']=4\n",
+    "offers_reserved_by_the_user_but_not_consumed['note']=4\n",
     "\n",
-    "#On enregistre en csv \n",
-    "offres_pas_consommees.to_csv('offres_pas_consommees.csv', sep = '\\t', index=False)\n",
+    "offers_reserved_by_the_user_but_not_consumed.to_csv('offers_reserved_by_the_user_but_not_consumed.csv', sep = '\\t', index=False)\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
@@ -92,10 +100,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On recupere la table des utilisateurs qui ont acheté des offres mais annulé par la suite\n",
     "debut = time.time()\n",
     "\n",
-    "offres_annulees = pd.read_sql_query(\"\"\"SELECT booking.\"userId\" as user_id, stock.\"offerId\" as offer_id, type, \"isVirtual\"\n",
+    "offers_reserved_by_the_user_but_canceled = pd.read_sql_query(\"\"\"SELECT booking.\"userId\" as user_id, stock.\"offerId\" as offer_id, type, \"isVirtual\"\n",
     "                       FROM booking \n",
     "                       LEFT JOIN stock ON booking.\"stockId\" = stock.id\n",
     "                       LEFT JOIN offer ON stock.\"offerId\"=offer.\"id\"\n",
@@ -103,10 +110,9 @@
     "                       WHERE booking.\"isUsed\"=False AND booking.\"isCancelled\"=True \n",
     "                       AND offer.type!='EventType.ACTIVATION' AND offer.type != 'ThingType.ACTIVATION'\n",
     "                       \"\"\", connection)\n",
-    "offres_annulees['note']=3\n",
+    "offers_reserved_by_the_user_but_canceled['note']=3\n",
     "\n",
-    "#On enregistre en csv \n",
-    "offres_annulees.to_csv('offres_annulees.csv', sep = '\\t', index=False)\n",
+    "offers_reserved_by_the_user_but_canceled.to_csv('offers_reserved_by_the_user_but_canceled.csv', sep = '\\t', index=False)\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
@@ -119,10 +125,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On récupère les offres mises en favoris \n",
     "debut = time.time()\n",
     "\n",
-    "offres_mises_en_fav = pd.read_sql_query(\"\"\"SELECT favorite.\"userId\" as user_id, favorite.\"offerId\" as offer_id, type, \"isVirtual\"\n",
+    "offers_favored_by_the_user = pd.read_sql_query(\"\"\"SELECT favorite.\"userId\" as user_id, favorite.\"offerId\" as offer_id, type, \"isVirtual\"\n",
     "                          FROM favorite \n",
     "                          LEFT JOIN \"user\" ON favorite.\"userId\" = \"user\".\"id\" \n",
     "                          LEFT JOIN offer ON favorite.\"offerId\"=offer.\"id\"\n",
@@ -130,10 +135,10 @@
     "                          WHERE \"user\".\"canBookFreeOffers\" = True\n",
     "                          AND offer.type!='EventType.ACTIVATION' AND offer.type != 'ThingType.ACTIVATION'\n",
     "                          \"\"\", connection)\n",
-    "offres_mises_en_fav['note']=2\n",
+    "offers_favored_by_the_user['note']=2\n",
     "\n",
     "#On enregistre en csv \n",
-    "offres_mises_en_fav.to_csv('offres_mises_en_fav.csv', sep = '\\t', index=False)\n",
+    "offers_favored_by_the_user.to_csv('offers_favored_by_the_user.csv', sep = '\\t', index=False)\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
@@ -146,10 +151,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On récupère les offres cliquées\n",
     "debut = time.time()\n",
     "\n",
-    "offres_cliquees = pd.read_sql_query(\"\"\"SELECT \"userId\" as user_id, offer.\"id\" as offer_id, type, \"isVirtual\"\n",
+    "offers_clicked_by_the_user = pd.read_sql_query(\"\"\"SELECT \"userId\" as user_id, offer.\"id\" as offer_id, type, \"isVirtual\"\n",
     "                                     FROM recommendation \n",
     "                                     LEFT JOIN \"user\" ON recommendation.\"userId\" = \"user\".\"id\"\n",
     "                                     LEFT JOIN offer ON recommendation.\"offerId\" = offer.\"id\"\n",
@@ -161,10 +165,9 @@
     "                                     AND \"user\".\"canBookFreeOffers\" = True\n",
     "                                     AND offer.type!='EventType.ACTIVATION' AND offer.type!='ThingType.ACTIVATION'\n",
     "                                     \"\"\", connection)\n",
-    "offres_cliquees['note']=1\n",
+    "offers_clicked_by_the_user['note']=1\n",
     "\n",
-    "#On enregistre en csv \n",
-    "offres_cliquees.to_csv('offres_cliquees.csv', sep = '\\t', index=False)\n",
+    "offers_clicked_by_the_user.to_csv('offers_clicked_by_the_user.csv', sep = '\\t', index=False)\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
@@ -177,10 +180,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On récupère les offres ignorées\n",
     "debut = time.time()\n",
     "\n",
-    "offres_ignorees = pd.read_sql_query(\"\"\"SELECT \"userId\" as user_id, \"offerId\" as offer_id, type, \"isVirtual\" \n",
+    "offers_ignored_by_the_user = pd.read_sql_query(\"\"\"SELECT \"userId\" as user_id, \"offerId\" as offer_id, type, \"isVirtual\" \n",
     "                                     FROM recommendation \n",
     "                                     LEFT JOIN \"user\" ON recommendation.\"userId\" = \"user\".\"id\"\n",
     "                                     LEFT JOIN offer ON recommendation.\"offerId\" = offer.\"id\"\n",
@@ -192,10 +194,9 @@
     "                                     AND \"user\".\"canBookFreeOffers\" = True \n",
     "                                     AND offer.type!='EventType.ACTIVATION' AND offer.type != 'ThingType.ACTIVATION'\n",
     "                                     \"\"\", connection)\n",
-    "offres_ignorees['note']=0\n",
+    "offers_ignored_by_the_user['note']=0\n",
     "\n",
-    "#On enregistre en csv \n",
-    "offres_ignorees.to_csv('offres_ignorees.csv', sep = '\\t', index=False)\n",
+    "offers_ignored_by_the_user.to_csv('offers_ignored_by_the_user.csv', sep = '\\t', index=False)\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
@@ -208,20 +209,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On fusionne les 6 tables pour avoir une table avec toutes les notes\n",
     "debut = time.time()\n",
     "\n",
-    "offres_avec_notes_0_5 = pd.concat([offres_achetees, offres_pas_consommees, offres_annulees, offres_mises_en_fav, \\\n",
-    "                        offres_cliquees, offres_ignorees])\n",
-    "offres_avec_notes_0_5 = offres_avec_notes_0_5.sort_values('note', ascending = True).drop_duplicates(subset = \\\n",
-    "                        ['user_id', 'offer_id'], keep='last')\n",
-    "\n",
-    "#On enregistre en csv \n",
-    "offres_avec_notes_0_5.to_csv('offres_avec_notes_0_5.csv', sep = '\\t', index=False)\n",
+    "offers_graded_from_0_to_5 = pd.concat([offers_reserved_by_the_user, offers_reserved_by_the_user_but_not_consumed, \\\n",
+    "                                   offers_reserved_by_the_user_but_canceled, offers_favored_by_the_user, \\\n",
+    "                                   offers_clicked_by_the_user, offers_ignored_by_the_user])\n",
+    "offers_graded_from_0_to_5 = offers_graded_from_0_to_5.sort_values('note', ascending = True).drop_duplicates(subset = \\\n",
+    "                            ['user_id', 'offer_id'], keep='last')\n",
+    "  \n",
+    "offers_graded_from_0_to_5.to_csv('offers_graded_from_0_to_5.csv', sep = '\\t', index=False)\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
     "print(temps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offers_graded_from_0_to_5.head()"
    ]
   },
   {
@@ -241,11 +250,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#on récupère le nombre d'utilisateurs et le nombre d'offres\n",
-    "user_id, freq_users = np.unique(offres_avec_notes_0_5['user_id'], return_counts=True)\n",
-    "offre_id, freq_offre = np.unique(offres_avec_notes_0_5['offer_id'], return_counts=True)\n",
-    "print(\"Le nombre d'utilisateurs est : \" + str(len(user_id)))\n",
-    "print(\"Le nombre d'offres est : \" + str(len(offre_id)))"
+    "print(\"There are :\", len(offers_graded_from_0_to_5['user_id'].unique()), \"different users\")\n",
+    "print(\"There are :\", len(offers_graded_from_0_to_5['offer_id'].unique()) , \"different offers\")"
    ]
   }
  ],
