updated packages for recommendation

--- a/notebooks/collaborative_filtering_model_based_SVD_binary_package.ipynb
+++ b/notebooks/collaborative_filtering_model_based_SVD_binary_package.ipynb
@@ -6,19 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from passculture_recommendations.data.feature_engineering import get_dataframe_of_all_the_interactions_from_0_to_5\n",
-    "from passculture_recommendations.data.feature_engineering import get_offers_that_interest_and_dont_interest_the_users\n",
-    "from passculture_recommendations.data.distribution_of_ratings_by_category import distribution_of_ratings\n",
+    "from passculture_recommendations.features.feature_engineering import get_featuresframe_of_all_the_interactions_from_0_to_5\n",
+    "from passculture_recommendations.features.feature_engineering import get_offers_that_interest_and_dont_interest_the_users\n",
+    "from passculture_recommendations.features.distribution_of_ratings_by_category import distribution_of_ratings\n",
     "from passculture_recommendations.personalisation.svd import svd_for_the_recommendation_testing\n",
     "from passculture_recommendations.personalisation.svd import svd_for_the_recommendation_training\n",
     "from passculture_recommendations.personalisation.metrics import accuracy_recall_precision_f1\n",
     "from passculture_recommendations.personalisation.metrics import plot_confusion_matrix\n",
     "from passculture_recommendations.personalisation.metrics import plot_roc_curve\n",
     "from passculture_recommendations.personalisation.metrics import find_the_thresholds_to_have_a_good_recall\n",
-    "from passculture_recommendations.data.feature_engineering import get_a_df_from_sql_query\n",
-    "from passculture_recommendations.data.add_support import add_support_in_type\n",
-    "from passculture_recommendations.data.recommendable_offers import get_all_the_recommendable_offers\n",
-    "from passculture_recommendations.data.recommendable_offers import get_all_the_recommendable_offers_from_bretagne\n",
+    "from passculture_recommendations.features.feature_engineering import get_a_df_from_sql_query\n",
+    "from passculture_recommendations.features.add_support import add_support_in_type\n",
+    "from passculture_recommendations.features.recommendable_offers import get_all_the_recommendable_offers\n",
+    "from passculture_recommendations.features.recommendable_offers import get_all_the_recommendable_offers_from_bretagne\n",
     "\n",
     "import pandas as pd \n",
     "import numpy as np\n",
