--- a/notebooks/get_user_offer_interaction_and_put_a_grade_package.ipynb
+++ b/notebooks/get_user_offer_interaction_and_put_a_grade_package.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from passculture_recommendations import feature_engineering\n",
+    "from passculture_recommendations.features import feature_engineering\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
