refactoring and updating requirements

--- a/notebooks/collaborative_filtering_model_based_SVD_binary_package.ipynb
+++ b/notebooks/collaborative_filtering_model_based_SVD_binary_package.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from passculture_recommendations.features.feature_engineering import get_featuresframe_of_all_the_interactions_from_0_to_5\n",
+    "from passculture_recommendations.features.feature_engineering import get_dataframe_of_all_the_interactions_from_0_to_5\n",
     "from passculture_recommendations.features.feature_engineering import get_offers_that_interest_and_dont_interest_the_users\n",
     "from passculture_recommendations.features.distribution_of_ratings_by_category import distribution_of_ratings\n",
     "from passculture_recommendations.personalisation.svd import svd_for_the_recommendation_testing\n",
@@ -58,13 +58,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"debut = time.time()\n",
+    "debut = time.time()\n",
     "\n",
-    "offers_graded_from_0_to_5 = get_dataframe_of_all_the_interactions_from_0_to_5()\n",
+    "offers_graded_from_0_to_5 = get_dataframe_of_all_the_interactions_from_0_to_5(connection)\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
-    "print(temps)\"\"\""
+    "print(temps)"
    ]
   },
   {
@@ -73,8 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"#On enregistre en csv \n",
-    "offers_graded_from_0_to_5.to_csv('offers_graded_from_0_to_5.csv', sep = '\\t', index=False)\"\"\""
+    "#On enregistre en csv \n",
+    "offers_graded_from_0_to_5.to_csv('offers_graded_from_0_to_5.csv', sep = '\\t', index=False)"
    ]
   },
   {
@@ -254,14 +254,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"debut = time.time()\n",
+    "debut = time.time()\n",
     "\n",
     "algo = svd_for_the_recommendation_training(offers_graded_from_0_to_1)\n",
     "predictions_of_the_grades = svd_for_the_recommendation_testing(algo)\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
-    "print(temps)\"\"\""
+    "print(temps)"
    ]
   },
   {
@@ -270,8 +270,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"#On enregistre en csv \n",
-    "predictions_of_the_grades.to_csv('predictions_of_the_grades.csv', sep = '\\t', index=False)\"\"\""
+    "#On enregistre en csv \n",
+    "predictions_of_the_grades.to_csv('predictions_of_the_grades.csv', sep = '\\t', index=False)"
    ]
   },
   {
@@ -969,13 +969,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"debut = time.time()\n",
+    "debut = time.time()\n",
     "\n",
     "predictions_of_the_grades = svd.svd_for_the_recommendation(offers_graded_from_0_to_1)\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
-    "print(temps)\"\"\"\n",
+    "print(temps)\n",
     "\n",
     "predictions_of_the_grades = pd.read_csv('predictions_of_the_grades.csv', sep = '\\t') "
    ]
@@ -1138,7 +1138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
