some changes in the tests files

--- a/notebooks/collaborative_filtering_model_based_SVD_binary.ipynb
+++ b/notebooks/collaborative_filtering_model_based_SVD_binary.ipynb
@@ -331,14 +331,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"debut = time.time()\n",
+    "debut = time.time()\n",
     "\n",
     "filename = 'train_100_binaire_avant_reequilibrage.sav'\n",
     "pickle.dump(algo, open(filename, 'wb'))\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
-    "print(temps)\"\"\""
+    "print(temps)"
    ]
   },
   {
@@ -385,14 +385,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"debut = time.time()\n",
+    "debut = time.time()\n",
     "\n",
     "filename = 'prediction_1000_binaire_avant_reequilibrage.sav'\n",
     "pickle.dump(predictions_of_the_grades, open(filename, 'wb'))\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
-    "print(temps)\"\"\""
+    "print(temps)"
    ]
   },
   {
