--- a/notebooks/collaborative_filtering_model_based_SVD_binary_package.ipynb
+++ b/notebooks/collaborative_filtering_model_based_SVD_binary_package.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,20 +36,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Récupération des données"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Offres notées par les utilisateurs de 0 à 5\n",
-    "- Offres achetées : 5\n",
-    "- Offres achetées et pas consommées : 4 \n",
-    "- Offres achetées et annulées : 3 \n",
-    "- Offres mises en favoris : 2\n",
-    "- Offres cliquées : 1 \n",
-    "- Offres ignorées : 0 "
+    "### Offers rated by users from 0 to 5\n",
+    "- Offers reserved: 5\n",
+    "- Offers reserved but not consumed: 4\n",
+    "- Offers reserved and canceled: 3\n",
+    "- Favorite offers: 2\n",
+    "- Offers clicked: 1\n",
+    "- Offers ignored: 0"
    ]
   },
   {
@@ -90,9 +83,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Offres notées par les utilisateurs (notes binaires)\n",
-    "- Note 1 : offres mises en favoris, achetées et annnulées, achetées et pas consommées, achetées \n",
-    "- Note 0 : offres ignorées ou juste cliquées"
+    "### Offers rated by users (binary notes)\n",
+    "- Favorite offers, reserved and canceled, reserved and not consumed, reserved : 1\n",
+    "- Offers ignored or just clicked : 0"
    ]
   },
   {
@@ -1138,7 +1131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
