--- a/notebooks/package_for_recommendation/collaborative_filtering_model_based_SVD_binary_package.ipynb
+++ b/notebooks/package_for_recommendation/collaborative_filtering_model_based_SVD_binary_package.ipynb
@@ -19,6 +19,11 @@
     "from passculture_recommendations.features.add_support import add_support_in_type\n",
     "from passculture_recommendations.features.recommendable_offers import get_all_the_recommendable_offers\n",
     "from passculture_recommendations.features.recommendable_offers import get_all_the_recommendable_offers_from_bretagne\n",
+    "from passculture_recommendations.personalisation.prediction_for_one_user import get_the_prediction_for_one_user\n",
+    "from passculture_recommendations.features.functions_over_the_types import create_dataframe_of_the_name_of_all_the_types\n",
+    "from passculture_recommendations.features.functions_over_the_types import replace_dot_with_a_dash_in_the_column_type\n",
+    "from passculture_recommendations.diversification.algorithm_swap_using_the_confusion_matrix import add_one_offer_that_diversifies_the_recommended_offers\n",
+    "\n",
     "\n",
     "import pandas as pd \n",
     "import numpy as np\n",
@@ -51,23 +56,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "debut = time.time()\n",
+    "\"\"\"debut = time.time()\n",
     "\n",
     "offers_graded_from_0_to_5 = get_dataframe_of_all_the_interactions_from_0_to_5(connection)\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
-    "print(temps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#On enregistre en csv \n",
-    "offers_graded_from_0_to_5.to_csv('offers_graded_from_0_to_5.csv', sep = '\\t', index=False)"
+    "print(temps)\"\"\""
    ]
   },
   {
@@ -126,9 +121,9 @@
     "               y = data.values,\n",
     "               )\n",
     "\n",
-    "layout = dict(title = 'Distribution de {} notes'.format(offers_graded_from_0_to_1.shape[0]),\n",
-    "              xaxis = dict(title = 'Notes'),\n",
-    "              yaxis = dict(title = \"Nombre de notes\"))\n",
+    "layout = dict(title = 'Distribution of {} rates'.format(offers_graded_from_0_to_1.shape[0]),\n",
+    "              xaxis = dict(title = 'Rates'),\n",
+    "              yaxis = dict(title = \"Number of rates\"))\n",
     "\n",
     "fig = go.Figure(data=[trace], layout=layout)\n",
     "fig.show()"
@@ -162,26 +157,26 @@
     "fig.add_trace(\n",
     "    go.Bar(x=number_of_rates_per_type['type'], \n",
     "               y=number_of_rates_per_type['total'],\n",
-    "               name=\"Nombre de notes\"),\n",
+    "               name=\"Number of rates\"),\n",
     "    secondary_y=False,\n",
     ")\n",
     "\n",
     "fig.add_trace(\n",
     "    go.Scatter(x=number_of_rates_per_type['type'],\n",
     "               y=number_of_rates_per_type['pourcentage_note1'],\n",
-    "               name=\"%tage note 1\"),\n",
+    "               name=\"%tage rate 1\"),\n",
     "    secondary_y=True,\n",
     ")\n",
     "\n",
     "#On ajoute le titre\n",
-    "fig.update_layout(title_text='Distribution des notes par type')\n",
+    "fig.update_layout(title_text='Distribution of rates per type')\n",
     "\n",
     "#Titre de l'axe x \n",
-    "fig.update_xaxes(title_text=\"types\")\n",
+    "fig.update_xaxes(title_text=\"Types\")\n",
     "\n",
     "#Titre des axes y \n",
-    "fig.update_yaxes(title_text=\"Nombre de notes\", secondary_y=False)\n",
-    "fig.update_yaxes(title_text=\"Pourcentage dans la note 1\", secondary_y=True)\n",
+    "fig.update_yaxes(title_text=\"Number of rates\", secondary_y=False)\n",
+    "fig.update_yaxes(title_text=\"Percentage rate 1\", secondary_y=True)\n",
     "\n",
     "fig.show()"
    ]
@@ -207,7 +202,7 @@
     "fig.add_trace(\n",
     "    go.Bar(x=number_of_rates_per_isVirtual['isVirtual'], \n",
     "               y=number_of_rates_per_isVirtual['total'],\n",
-    "               name=\"Nombre de notes\"),\n",
+    "               name=\"Number of rates\"),\n",
     "    secondary_y=False,\n",
     ")\n",
     "\n",
@@ -219,14 +214,14 @@
     ")\n",
     "\n",
     "#On ajoute le titre\n",
-    "fig.update_layout(title_text='Distribution des notes par isVirtual')\n",
+    "fig.update_layout(title_text='Distribution of rates per isVirtual')\n",
     "\n",
     "#Titre de l'axe x \n",
     "fig.update_xaxes(title_text=\"Types\")\n",
     "\n",
     "#Titre des axes y \n",
-    "fig.update_yaxes(title_text=\"Nombre de notes\", secondary_y=False)\n",
-    "fig.update_yaxes(title_text=\"Pourcentage dans la note 1\", secondary_y=True)\n",
+    "fig.update_yaxes(title_text=\"Number of rates\", secondary_y=False)\n",
+    "fig.update_yaxes(title_text=\"Percentage rate 1\", secondary_y=True)\n",
     "\n",
     "fig.show()"
    ]
@@ -249,8 +244,7 @@
    "source": [
     "debut = time.time()\n",
     "\n",
-    "algo = svd_for_the_recommendation_training(offers_graded_from_0_to_1)\n",
-    "predictions_of_the_grades = svd_for_the_recommendation_testing(algo)\n",
+    "algo, testset = svd_for_the_recommendation_training(offers_graded_from_0_to_1)\n",
     "\n",
     "fin = time.time()\n",
     "temps = (fin - debut)/60\n",
@@ -263,17 +257,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#On enregistre en csv \n",
-    "predictions_of_the_grades.to_csv('predictions_of_the_grades.csv', sep = '\\t', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions_of_the_grades = pd.read_csv('predictions_of_the_grades.csv', sep = '\\t') "
+    "debut = time.time()\n",
+    "\n",
+    "predictions_of_the_grades = svd_for_the_recommendation_testing(algo, testset)\n",
+    "\n",
+    "fin = time.time()\n",
+    "temps = (fin - debut)/60\n",
+    "print(temps)"
    ]
   },
   {
@@ -499,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recommendable_offers_to_all_the_users = get_all_the_recommendable_offers()"
+    "recommendable_offers_to_all_the_users = get_all_the_recommendable_offers(connection)"
    ]
   },
   {
@@ -532,7 +522,7 @@
    "outputs": [],
    "source": [
     "user_id = 25549\n",
-    "offers_recommended_to_a_user = get_the_prediction_for_one_user(user_id, recommendable_offers_to_all_the_users, algo)"
+    "offers_recommended_to_a_user = get_the_prediction_for_one_user(user_id, recommendable_offers_to_all_the_users, algo)\n"
    ]
   },
   {
@@ -542,6 +532,15 @@
    "outputs": [],
    "source": [
     "offers_recommended_to_a_user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offers_recommended_to_a_user.to_csv('../offers_recommended_to_a_user.csv', index=False, sep = '\\t') "
    ]
   },
   {
@@ -615,7 +614,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%pdb"
+    "%pdb"
    ]
   },
   {
@@ -1131,7 +1130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
